更新注册样式

--- a/client/html/login.html
+++ b/client/html/login.html
@@ -57,13 +57,29 @@
                         <div class="nop-form-item">
                             <div class="nop-form-item-input">
                                 <div class="suggest-wrapper">
-                                    <div class="bview-input-wrapper">
-                                        <input type="text" placeholder="请输入邮箱地址">
-                                        <span class="ieplaceholder" style="display: none;">请输入邮箱地址</span>
+                                    <div class="bview-input-wrapper" style="width: 100%;">
+                                        <div class="bview-input-icon"></div>
+                                        <input type="text" placeholder="请输入邮箱地址" class="bview-input">
+                                        <span class="ieplaceholder" style="display: none;">dafda</span>
                                     </div>
                                 </div>
+                                <div class="nop-form-item-tip"></div>
                             </div>
+                        </div>
 
+                        <div class="nop-form-item">
+                            <div class="nop-form-item-input">
+                                <div class="pwd-wrapper">
+                                    <div class="bview-input-wrapper" style="width: 100%;">
+                                        <div class="bview-input-icon">
+                                            <i></i>
+                                        </div>
+                                        <input type="password" placeholder="请输入8-16位密码" class="bview-input">
+                                        <span class="ieplaceholder" style="display: none;">请输入8-16位密码</span>
+                                    </div>
+                                </div>
+                                <div class="nop-form-item-tip"></div>
+                            </div>
                         </div>
                     </div>
                     <div class="agree">
