注册和登录，正在做详情页和购物车

--- a/client/html/head.html
+++ b/client/html/head.html
@@ -1,71 +1,15 @@
-<div class="navbar">
-    <div class="m-header">
-        <div class="container">
-            <a href="">
-                <img class="u-logo" src="./images/logo.png" alt="">
-            </a>
-            <ul class="topbar-list">
-                <li><a href="">插线板</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list">
+<!DOCTYPE html>
+<html lang="en">
 
-                            </ul>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="">音箱耳机</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list"></ul>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="">手机配件</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list"></ul>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="">电脑办公</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list"></ul>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="">电池电源</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list"></ul>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="">生活电器</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list"></ul>
-                        </div>
-                    </div>
-                </li>
-                <li><a href="">个护健康</a>
-                    <div class="nav-dropdown">
-                        <div class="nav-cateCard">
-                            <ul class="card-list"></ul>
-                        </div>
-                    </div>
-                </li>
-            </ul>
-            <div class="topbar">
-                <div class="icon-index">
-                    <ul class="index-pop">
-                        <li><a href="">登录</a></li>
-                        <li><a href="">注册</a></li>
-                    </ul>
-                </div>
-                <div class="smallcart"></div>
-            </div>
-        </div>
-    </div>
-</div>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+
+</head>
+
+<body>
+
+</body>
+
+</html>
